--- a/scripts/run_batch_create_index.ipynb
+++ b/scripts/run_batch_create_index.ipynb
@@ -24,7 +24,6 @@
     "import subprocess\n",
     "import tqdm\n",
     "from openai import AzureOpenAI\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()  "
@@ -91,7 +90,7 @@
     "with open(\"./config.json\", \"r\") as f:\n",
     "    config = json.loads(f.read())\n",
     "\n",
-    "config\n"
+    "config"
    ]
   },
   {
@@ -121,7 +120,6 @@
     "        \"form-rec-use-layout\": False,\n",
     "    },\n",
     "    \"nyc\": \"nyc_embed_003_small_512_512_index\",\n",
-    "    # \"pdf-testing\": \"pdf_testing_embed_003_large_1024_index\", # this is just for testing pdf\n",
     "    \"Premera\": \"premera_embed_003_small_512_512_index\",\n",
     "    \"product-info\": {\n",
     "        \"index\": \"product_info_embed_003_small_512_512_index\",\n",
@@ -138,26 +136,6 @@
     "    \"yw\": \"yw_embed_003_small_512_512_index\",\n",
     "    \n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['aks', 'azure-docs', 'Mercedes', 'merge_contact', 'nyc', 'Premera', 'product-info', 'test_loranorm', 'tprompt', 'yw'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run_config_by_data_path_3_small_512_512.keys()"
    ]
   },
   {
@@ -315,10 +293,6 @@
    ],
    "source": [
     "for key, cfg in tqdm.tqdm(run_config_by_data_path_3_small_512_512.items()):\n",
-    "    # if key in ['aks', ]:\n",
-    "    #     continue\n",
-    "    # if key != 'merge_contact':\n",
-    "    #     continue\n",
     "    folder = os.path.join(\"../../data/gptassertdata/index_data\", key)\n",
     "    \n",
     "    if isinstance(cfg, str):\n",
